[package]
name = "ini_parser_gladun"
version = "0.1.2"
edition = "2024"
authors = ["Gladun Ostap hladun.ostap@gmail.com>"]
description = "INI file parser library and CLI, built with pest."
repository = "https://github.com/OstapGladun/ini_parser"
license = "MIT"
keywords = ["ini", "parser", "pest", "peg"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[lib]
name = "ini_parser"
path = "src/lib.rs"

[[bin]]
name = "ini_parser"
path = "src/main.rs"

[dev-dependencies]
anyhow = "1.0.100"